# TrackpadEvdevConverter

./: .gitignore  Cargo.toml  LICENSE  README.md  dbus.conf  flake.nix
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 4x2zlcalf2izi371m0a25b9qg5fp705x-source  718rglgxpmckg5cdwax9vnw29nnm4bvw-source  n1107d04s29csxxyaanvj6hg79v6nkgl-source
src/: client.rs  communicator.rs  main.rs  manager.rs  mouse.rs  server.rs  session.rs
temp/: .rustc_info.json
temp/release/: trackpad-evdev-converter.d
temp/release/.fingerprint/autocfg-ddafef685a98faeb/: lib-autocfg  lib-autocfg.json
temp/release/.fingerprint/bitflags-d639971962f57f6c/: lib-bitflags  lib-bitflags.json
temp/release/.fingerprint/bitvec-dc975984ce84e102/: lib-bitvec  lib-bitvec.json
temp/release/.fingerprint/cfg-if-fad8d17a588f1088/: lib-cfg_if  lib-cfg_if.json
temp/release/.fingerprint/evdev-9de01597bebd0f13/: lib-evdev  lib-evdev.json
temp/release/.fingerprint/funty-a68e75b4ca1611bd/: lib-funty  lib-funty.json
temp/release/.fingerprint/libc-01031b0be44b67c5/: lib-libc  lib-libc.json
temp/release/.fingerprint/libc-20c063e5aa77d739/: run-build-script-build-script-build  run-build-script-build-script-build.json
temp/release/.fingerprint/libc-ac0b713d0dd5a2f4/: build-script-build-script-build  build-script-build-script-build.json
temp/release/.fingerprint/memoffset-1ab1e841696930d5/: build-script-build-script-build  build-script-build-script-build.json
(+38 files in other folders)
