[package]
name = "trackpad-evdev-converter"
version = "0.1.0"
edition = "2021"

[dependencies]
evdev = { version = "0.12.1", features = ["tokio"]}
tokio = { version = "1.37.0", features = ["full"] }
input = "0.9.0"
libc = "0.2.154"
dbus-tokio = "0.7.6"
dbus-crossroads = "0.5.2"
dbus = "0.9.7"
futures = "0.3.30"